--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="UTF-8">
     <title>X-Team Maps Demo &#12484;</title>
     <link rel="shortcut icon" type="image/png" href="images/favIcon.png">
@@ -8,8 +9,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<h1>In the name of Allah &#12484;</h1>
+	<div id="map"></div>
    
-   
+	<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>    
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhgknB4-UBk-6WQGo4Qq_nUv-oBqNgJls&callback=initMap"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
