--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body>
 	<h1>In the name of Allah &#12484;</h1>
 	<div id="map"></div>
-        
-	<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
     </script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhgknB4-UBk-6WQGo4Qq_nUv-oBqNgJls&callback=initMap"></script>
     
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
